# daemon-app

./: .clang-format  .clang-format-ignore  .clang-tidy  .editorconfig  .gitignore  .qmllint.ini  .stream-plan.md  AGENTS.md  AUTH_PLAN.md  CMakeLists.txt  CMakePresets.json  HARDENING-PLAN-app-session-meta.md  HARDENING-PLAN.md  LICENSE  README.md  REUSE.toml  THIRD-PARTY-NOTICES.md  flake.nix  typos.toml
src/: CMakeLists.txt
src/DaemonApp/: CMakeLists.txt  README.md
src/DaemonApp/App/: CMakeLists.txt  CommandPalette.qml  Main.qml  RightPanel.qml  application.cpp  application.h  main.cpp
src/DaemonApp/BlockEditor/: CMakeLists.txt
src/DaemonApp/Chat/: CMakeLists.txt  ChatPage.qml  chat_conversation_controller.cpp  chat_conversation_controller.h  conv_send_controller.cpp  conv_send_controller.h
src/DaemonApp/Command/: CMakeLists.txt  command_registry.cpp  command_registry.h
src/DaemonApp/Composer/: AttachmentChip.qml  CMakeLists.txt  CheckpointTimeline.qml  CheckpointsPopover.qml  CompletionPopover.qml  CompletionProvider.qml  Composer.qml  ComposerControls.qml  ComposerMenu.qml  ModelPickerOverlay.qml  ModelPill.qml  QueuePanel.qml  README.md  RewindConfirmDialog.qml  SessionSettingsPopover.qml  StatusStack.qml  SubagentList.qml  TodoList.qml  composer_upload_controller.cpp  composer_upload_controller.h
src/DaemonApp/ComposerSession/: CMakeLists.txt  completion_model.cpp  completion_model.h  composer_attachment_model.cpp  composer_attachment_model.h  composer_queue_model.cpp  composer_queue_model.h  composer_session_controller.cpp  composer_session_controller.h  outbox_composer_queue_storage.cpp  outbox_composer_queue_storage.h
src/DaemonApp/Controls/: Badge.qml  CMakeLists.txt  CheckBox.qml  Chip.qml  Dialog.qml  Dropdown.qml  EditMenu.qml  EngineOriginChip.qml  Glyph.qml  IconButton.qml  Menu.qml  MenuItem.qml  MenuSeparator.qml  ProgressBar.qml  README.md  ScrollBar.qml  SettingsSchemaForm.qml  SpinBox.qml  Switch.qml  TextArea.qml  TextButton.qml  TextField.qml  ThemeSwatch.qml  Toast.qml  Tooltip.qml  TreeRow.qml  qr_code_item.cpp  qr_code_item.h
src/DaemonApp/Conversation/: CMakeLists.txt  Conversation.qml  README.md  ToolGroup.qml  TranscriptPage.qml  conversation_controller.cpp  conversation_controller.h  conversation_orchestrator.cpp  conversation_orchestrator.h  subagent_model.cpp  subagent_model.h  todo_list_model.cpp  todo_list_model.h
src/DaemonApp/ConversationsList/: CMakeLists.txt  ConversationsList.qml  README.md  conversations_list_model.cpp  conversations_list_model.h
src/DaemonApp/Editor/: CMakeLists.txt
src/DaemonApp/Export/: CMakeLists.txt  transcript_exporter.cpp  transcript_exporter.h
src/DaemonApp/Files/: CMakeLists.txt  file_finder_model.cpp  file_finder_model.h  fs_explorer_model.cpp  fs_explorer_model.h
src/DaemonApp/Graph/: CMakeLists.txt  GraphView.qml  NodeChip.qml  graph_model.cpp  graph_model.h
src/DaemonApp/Memory/: CMakeLists.txt  memory_graph_model.cpp  memory_graph_model.h  memory_list_model.cpp  memory_list_model.h  memory_stats_model.cpp  memory_stats_model.h  memory_timeline_model.cpp  memory_timeline_model.h
src/DaemonApp/Pages/: AboutSection.qml  AccountsPage.qml  AddAccountWizard.qml  ComboRow.qml  (+60 more)
src/core/: CMakeLists.txt  README.md
src/tui/: CMakeLists.txt  agent_setup_view.cpp  agent_setup_view.h  agent_type_view.cpp  agent_type_view.h  attachment_bar_view.cpp  attachment_bar_view.h  chat_pending_strip_view.cpp  chat_pending_strip_view.h  code_editor_view.cpp  code_editor_view.h  completion_view.cpp  completion_view.h  composer_chrome.cpp  composer_chrome.h  conversation_list_view.cpp  conversation_list_view.h  display_role_adapter.cpp  display_role_adapter.h  file_finder_dialog.cpp  file_finder_dialog.h  file_tree_view.cpp  file_tree_view.h  interactive_turn_host.cpp  interactive_turn_host.h  line_editor.cpp  line_editor.h  main.cpp  mouse_terminal.cpp  mouse_terminal.h  palette_dialog.cpp  palette_dialog.h  participants_view.cpp  participants_view.h  queue_strip_view.cpp  queue_strip_view.h  root_widget.cpp  root_widget.h  root_widget_detail.cpp  root_widget_detail.h  (+40 more)
tests/: CMakeLists.txt  README.md
tests/blockeditor/: CMakeLists.txt  core_tests.cpp  diagram_tests.cpp
tests/qml/: CMakeLists.txt  tst_badge_main.cpp  tst_chip_main.cpp  tst_composer_main.cpp  tst_downloads_panel_main.cpp  tst_engine_origin_chip_main.cpp  tst_integrations_main.cpp  tst_sidebar_main.cpp  tst_tabs_main.cpp  tst_theme.qml  tst_theme_main.cpp
tests/tui/: CMakeLists.txt  tst_accounts_wizard.cpp  tst_chat_activation.cpp  tst_file_finder_dialog.cpp  tst_first_run_dialog.cpp  tst_hub_channels.cpp  tst_integrations_activation.cpp  tst_integrations_tree_view.cpp  tst_interactive_turn_host.cpp  tst_profile_editor.cpp  tst_settings_page.cpp  tst_tab_strip.cpp  tst_tab_title_mirror.cpp  tst_tab_title_refresh.cpp  tst_transcript_render.cpp  tst_transcript_view.cpp  tst_tui_access_gating.cpp  tst_tui_palette.cpp  tui_parity_tests.cpp
tests/unit/: CMakeLists.txt  cache_test_support.h  tst_accounts_service.cpp  tst_agent_registry.cpp  tst_agent_setup_model.cpp  tst_app_service_graph.cpp  tst_approval_wire.cpp  tst_auth_flow.cpp  tst_automation.cpp  tst_autostart.cpp  tst_chat_conversation_controller.cpp  tst_chat_conversation_mirror.cpp  tst_checkpoint_repository.cpp  tst_completion.cpp  tst_composer_outbox_queue.cpp  tst_composer_session.cpp  tst_composer_upload.cpp  tst_connection_resilience.cpp  tst_connection_service.cpp  tst_conv_send_lane.cpp  tst_conversation_orchestrator.cpp  tst_conversation_store_sqlite.cpp  tst_daemon_approvals_inbox.cpp  tst_daemon_config.cpp  tst_daemon_fleet_tree.cpp  tst_daemon_fs_service.cpp  tst_daemon_integration.cpp  tst_daemon_model_catalog.cpp  tst_daemon_profile_store.cpp  tst_daemon_roster_dashboard.cpp  tst_daemon_transports.cpp  tst_daemonnet.cpp  tst_editor_feedback.cpp  tst_editor_search.cpp  tst_engine_identity.cpp  tst_feedback.cpp  tst_file_finder_model.cpp  tst_fingerprint_manage.cpp  tst_first_run_model.cpp  tst_fleet_ops.cpp  (+80 more)
tests/wasm/: build-wasm-probe.sh  mirror_wasm_probe.cpp
(+740 files in other folders)
