# Each feature is its own QML module under a directory mirroring its URI
# (DaemonApp.<Feature>). App links the feature modules and exposes the shared
# core service seams that currently use mock/local-dev implementations.

add_subdirectory(Theme)
add_subdirectory(Controls)
add_subdirectory(Editor)
add_subdirectory(BlockEditor)
add_subdirectory(Turn)
add_subdirectory(Transcript)
add_subdirectory(ComposerSession)
add_subdirectory(Composer)
add_subdirectory(Graph)
add_subdirectory(Sidebar)
add_subdirectory(SessionsList)
add_subdirectory(Session)
add_subdirectory(Tabs)
add_subdirectory(Files)
add_subdirectory(Participants)
add_subdirectory(Settings)
add_subdirectory(Pages)
add_subdirectory(Memory)
add_subdirectory(StatusModel)
add_subdirectory(StatusBar)
add_subdirectory(Command)
add_subdirectory(Export)
add_subdirectory(App)
