add_subdirectory(util)
add_subdirectory(domain)
# uimodels + daemonnet provide the unified DaemonNet seed that persistence (InMemorySessionStore)
# is re-seeded from, so they must be configured before persistence.
add_subdirectory(uimodels)
add_subdirectory(daemonnet)
add_subdirectory(i18n)
add_subdirectory(persistence)
add_subdirectory(platform)
add_subdirectory(presentation)
add_subdirectory(theme)
add_subdirectory(settings)
add_subdirectory(update)
# After settings + update: the autostart seam links daemon-app::settings_store
# (and, on macOS, daemon-app::update for the bundle/translocation predicates),
# and alias targets must exist before they are named.
add_subdirectory(platform/autostart)
add_subdirectory(connection)
add_subdirectory(fs)
add_subdirectory(memory)
add_subdirectory(nav)
add_subdirectory(firstrun)
add_subdirectory(config)
add_subdirectory(feedback)
add_subdirectory(models)
add_subdirectory(accounts)
add_subdirectory(auth)
add_subdirectory(profiles)
add_subdirectory(setup)
add_subdirectory(fleet)
add_subdirectory(automation)
add_subdirectory(session)
add_subdirectory(transports)
add_subdirectory(tools) # [wave2:app-approvals-safety] D2 tool inventory seam
add_subdirectory(daemon)
